add command 3e section

--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
                             <div class="main-navigation">
                                 
                                 <ul id="menu" class="nav navbar-nav">
-                                    <li><a href="#home">Home</a></li>
-                                    <li><a href="#about">About</a></li>
-                                    <li><a href="#features">Features</a></li>
+                                    <li><a href="#home">C'est Quoi ?</a></li>
+                                    <li><a href="#about">le versionning</a></li>
+                                    <li><a href="#features">les capacitées</a></li>
                                     <li><a href="#portfolio">Portfolio</a></li>
                                     <li><a href="#service">Service</a></li>
                                     <li><a href="#news">News</a>
                                         <ul >
-                                            <li><a href="#home">Home</a></li>
-                                            <li><a href="#about">About</a></li>
-                                            <li><a href="#features">Features</a></li>
-                                            <li><a href="#portfolio">Portfolio</a></li>
+                                            <li><a href="#home">C'est Quoi ?</a></li>
+                                            <li><a href="#about">le versionning</a></li>
+                                            <li><a href="#features">les capacitées</a></li>
+                                            <li><a href="#portfolio">les commandes</a></li>
                                             <li><a href="#service">Service</a></li>
                                             <li><a href="#news">News</a></li>
                                             <li><a href="#contact">Contact</a></li>
@@ -176,16 +176,15 @@
         </section>
 
 
-      <!--   <section id="portfolio" class="portfolio">
+        <section id="portfolio" class="portfolio">
             <div class="container">
                 <div class="row">
                     <div class="main_portfolio_area text-center">
                         <div class="head_title">
-                            <h2>Designed for humans</h2>
-                            <p> Kickstarter umami Intelligentsia kogi. Try-hard flannel literally, 
-                                chambray blog crucifix put a bird on it four dollar toast cardigan 
-                                scenester aesthetic sartorial chia messenger bag Pinterest. 
-                                3 wolf moon Thundercats Banksy paleo, yr four loko Shoreditch dreamcatcher.</p>
+                            <h2>Les commandes</h2>
+                            <p> Grace au commandes tout est possible, 
+                                vous pouvez clonez un depot recuperé des données avec le pull. 
+                                Et le fameux push qui vous permet de mettre a jour votre depot.</p>
                         </div>
 
                         <div class="col-sm-10 col-sm-offset-1">
@@ -219,10 +218,9 @@
                                 <div class="single_service_icon">
                                     <i class="lnr lnr-pencil"></i>
                                 </div>
-                                <h3><span>01</span> Design</h3>
-                                <p>Scenester PBR deep v jean shorts typewriter. Sustainable keytar Tumblr, authentic mustache locavore scenester 
-                                    gentrify meh banjo fanny pack health goth. Four dollar toast scenester XOXO crucifix, 
-                                    mumblecore banh mi yr cold-pressed Bushwick.</p>
+                                <h3><span>01</span> Status</h3>
+                                <p>Consulter en une commande l'etat de votre copie local 
+                                    la copie local est une sauvegarde de vos modifications dans votre ordinateur et permet de suivre l'evolution de votre developpement  .</p>
                             </div>
                         </div>
                         <div class="col-sm-3">
@@ -230,10 +228,9 @@
                                 <div class="single_service_icon">
                                     <i class="lnr lnr-location"></i>
                                 </div>
-                                <h3><span>02</span> Refinement</h3>
-                                <p>Scenester PBR deep v jean shorts typewriter. Sustainable keytar Tumblr, authentic mustache locavore scenester 
-                                    gentrify meh banjo fanny pack health goth. Four dollar toast scenester XOXO crucifix, 
-                                    mumblecore banh mi yr cold-pressed Bushwick.</p>
+                                <h3><span>02</span> Clone</h3>
+                                <p>Avec le clone recuperer l'ensemble d'un depot 
+                                    Toujour avec une commandes récuperer un depot avec son url , cela vous permettra de sauvegarder le depot distant dans votre ordinateur .</p>
                             </div>
                         </div>
                         <div class="col-sm-3">
@@ -241,10 +238,9 @@
                                 <div class="single_service_icon">
                                     <i class="icon icon-brush"></i>
                                 </div>
-                                <h3><span>03</span> Dive In</h3>
-                                <p>Scenester PBR deep v jean shorts typewriter. Sustainable keytar Tumblr, authentic mustache locavore scenester 
-                                    gentrify meh banjo fanny pack health goth. Four dollar toast scenester XOXO crucifix, 
-                                    mumblecore banh mi yr cold-pressed Bushwick.</p>
+                                <h3><span>03</span> Pull</h3>
+                                <p>Un collaborateur vient de mettre a jour le depot. Pas de problems la commande Pull recupere les dernieres modification 
+                                    Le pull vous permet de mettre a jours rapidement vos environnement qu'il sois en production ou en developement .</p>
                             </div>
                         </div>
                         <div class="col-sm-3">
@@ -252,21 +248,20 @@
                                 <div class="single_service_icon">
                                     <i class="icon icon-search4"></i>
                                 </div>
-                                <h3><span>04</span> Research</h3>
-                                <p>Scenester PBR deep v jean shorts typewriter. Sustainable keytar Tumblr, authentic mustache locavore scenester 
-                                    gentrify meh banjo fanny pack health goth. Four dollar toast scenester XOXO crucifix, 
-                                    mumblecore banh mi yr cold-pressed Bushwick.</p>
+                                <h3><span>04</span> Push</h3>
+                                <p>Exporter vos derniers modification validé sur votre depot 
+                                    Le push vous permet de mettre a jours les derniers modifications qui sont validé par un commit nous allons d'ailleur aborder le sujet plus bas Enjoy.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
- -->
 
 
 
-       <!--  <section id="news"  class="news">
+
+         <section id="news"  class="news">
 
             <div class="row">
                 <div class="top_new_one_left">
@@ -354,7 +349,7 @@
         </section>
 
 
-        <section id="contact" class="footer_widget">
+      <!--  <section id="contact" class="footer_widget">
             <div class="container">
                 <div class="row">
                     <div class="main_widget">
