add last section with short history & fix all seemore button

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                 <h2>Versionning de fichier</h2>
                                 <p>Le versionning de fichier permet de comparé la version distante d'une version locale d'un fichier </p>
 
-                                <a href="" class="btn btn-primary">See More</a>
+                                <a href="https://git-scm.com/doc" class="btn btn-primary">See More</a>
 
                             </div>
                         </div>
@@ -277,16 +277,14 @@
                                 <a href=""><i class="fa fa-play"></i><img src="" alt="" /></a>
                             </div>
                         </div>
-
                         <div class="col-sm-7 no-padding">
                             <div class="single_two_right_content">
-                                <div class="new_data">12th June 2015</div>
-                                <p>Lorem ipsum dolor sit amet, cotur adipisicing elit sed do eiusmod
-                                    tempor incididunt ut labore et dolore</p>
+                                <div class="new_data">Né en 2005 </div>
+                                <p>C'est grace a notre maitre a tous le grand Linus Torvalds, Qui créa son propre outils suite a la révocation du status de gratuit d'un autre outil.  </p>
 
                                 <div class="new_author">
-                                    <img src="assets/images/na1.jpg" alt="" />
-                                    <a href="">Blaz Robar</a>
+                                    
+                                     <a href="https://git-scm.com/book/fr/v1/Démarrage-rapide-Une-rapide-histoire-de-Git" class="btn btn-primary">See More</a>
                                 </div>
                             </div>
                         </div>
@@ -294,7 +292,7 @@
                 </div>
             </div>
 
-            <div class="news_three_area">
+          <!--   <div class="news_three_area">
                 <div class="row">
                     <div class="col-sm-5 col-xs-12 no-padding">
                         <div class="single_new_three_left">
@@ -336,7 +334,7 @@
 
         </section>
 
-
+ -->
       <!--  <section id="contact" class="footer_widget">
             <div class="container">
                 <div class="row">
@@ -421,7 +419,7 @@
 
                     <div class="col-md-12 col-sm-12">
                         <div class="copyright_text text-center">
-                            <p class=" wow fadeInRight" data-wow-duration="1s">Made with <i class="fa fa-heart"></i> by <a href="http://bootstrapthemes.co">Bootstrap Themes</a>2016. All Rights Reserved</p>
+                            <p class=" wow fadeInRight" data-wow-duration="1s">Made with <i class="fa fa-heart"></i> by Dr.Redfish</a>2018. All Rights Reserved</p>
                         </div>
                     </div>
                 </div>
